fix: se arreglaron los métodos principales del controlador, servicios, entidades y dto